--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,15 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.9
   
+  # Animations & UI Enhancements
+  flutter_animate: ^4.5.0
+  shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  animations: ^2.0.11
+  confetti: ^0.7.0
+  google_fonts: ^6.1.0
+  glassmorphism: ^3.0.0
+  
   # State Management
   provider: ^6.1.1
   
@@ -57,21 +66,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   
-  # Uncomment these when you add asset files:
-  # assets:
-  #   - assets/images/
-  #   - assets/icons/
-  #   - assets/data/
+  assets:
+    - assets/images/
+    - assets/icons/
 
-  # Uncomment and add SF Pro fonts when available:
-  # fonts:
-  #   - family: SF Pro
-  #     fonts:
-  #       - asset: assets/fonts/SF-Pro-Display-Regular.otf
-  #       - asset: assets/fonts/SF-Pro-Display-Medium.otf
-  #         weight: 500
-  #       - asset: assets/fonts/SF-Pro-Display-Semibold.otf
-  #         weight: 600
-  #       - asset: assets/fonts/SF-Pro-Display-Bold.otf
-  #         weight: 700
+  # Using Google Fonts for custom typography
 
