--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,12 +59,23 @@ dependencies:
   # iOS Widgets
   home_widget: ^0.6.0
 
+  # In-App Purchases (RevenueCat - handles iOS/Android subscriptions)
+  purchases_flutter: ^6.17.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
   mockito: ^5.4.4
   build_runner: ^2.4.8
+  flutter_launcher_icons: ^0.13.1
+
+# App Icon Configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
